bootstrap carousel overflow issue solved

--- a/week1/day2/Portfolio/public/gallery/styles.css
+++ b/week1/day2/Portfolio/public/gallery/styles.css
@@ -42,29 +42,15 @@ main {
     margin: 10px;
 }
 
-.arrow {
-    margin: 10px;
-    background-color: rgb(255, 248, 248);
-    width: 25px;
-    height: 50px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.carousel-wrapper,
+.carousel-inner {
+    width: 100%;
+    object-fit: contain;
+    margin: 0 100px 0 100px;
 }
 
-.arrow p {
-    font-size: large;
-    width: 20px;
-    height: 20px;
-    border-radius: 50px;
-}
-
-.arrow:hover {
-    transform: scale(1.2);
-    transition: 260ms;
-    box-shadow: 0px 0px 4px 0px #f0ecec;
+button {
+    color: black;
 }
 
 .product-info-container {
